notes/devops/k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: backend
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
spec:
  hosts:
    - "api.dev.application-host.com"
  gateways:
    - default/ingressgateway-dev.application-host.com
  http:
    - route:
        - destination:
            host: backend
            port:
              number: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    spec:
      containers:
        - name: backend
          image: <backend-image>
          resources:
            requests:
              cpu: "0.1"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: dockercfg
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-queue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    spec:
      containers:
        - name: backend-queue
          image: <backend-image>
          resources:
            requests:
              cpu: "0.1"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: dockercfg
