notes/devops/k8s/web-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 2 #The number of replicas should be at least 2
---
apiVersion: v1
kind: Service
metadata:
  name: webapp
  labels:
    app: webapp
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: webapp
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webapp
spec:
  hosts:
    - "dev.application-host.com"
  gateways:
    - default/ingressgateway-dev.application-host.com
  http:
    - route:
        - destination:
            host: webapp
            port:
              number: 3000
